# vdb-gif-search

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml
data/qdrant/: raft_state.json
data/qdrant/collections/gif_search/0/: replica_state.json
data/qdrant/collections/gif_search/0/segments/082f41ee-9f17-4307-aadd-eb6a6cfd191a/: 000024.sst  000029.sst  000036.sst  000042.sst  000047.sst  000052.sst  000059.sst  000065.sst  000070.sst  000091.sst  000092.sst  000095.sst  000103.sst  000105.sst  000108.sst  000110.sst  000111.sst  000114.sst  CURRENT  IDENTITY  LOG  MANIFEST-000099  segment.json
data/qdrant/collections/gif_search/0/segments/08f21374-bb0a-4cfa-9b8e-09f13634f9e9/: 000019.sst  000024.sst  000029.sst  000033.sst  000035.sst  000036.sst  000038.sst  000040.sst  000041.sst  000042.sst  000044.sst  000046.sst  000047.sst  000048.sst  000049.sst  000051.sst  000052.sst  000053.sst  000054.sst  IDENTITY  LOG  MANIFEST-000005  MANIFEST-000058  segment.json
data/qdrant/collections/gif_search/0/segments/13da74c8-fe9e-452b-b0d0-bed0ffeecf78/: 000017.sst  000020.sst  IDENTITY  LOG  LOG.old.1701605618356708  LOG.old.1701607394015345  MANIFEST-000024  MANIFEST-000028  segment.json
data/qdrant/collections/gif_search/0/segments/27da98d1-6740-402d-9df8-f9804aefd1bc/: 000019.sst  000026.sst  000031.sst  000035.sst  000037.sst  000038.sst  000040.sst  000042.sst  000044.sst  000045.sst  000046.sst  000047.sst  CURRENT  IDENTITY  LOG  LOG.old.1701607394011989  MANIFEST-000005  MANIFEST-000051  segment.json
data/qdrant/collections/gif_search/0/segments/384e83ad-39b8-46b8-903e-f64c41189e65/: CURRENT  (+22 more)
data/qdrant/collections/gif_search/0/wal/: first-index
docs/: index.md
docs/vdb/: Database Systems Data Models Vector Applications.md  Database Systems Data Models Vector Architecture.md  Database Systems Data Models Vector Embeddings.md  Database Systems Data Models Vector Implementations.md  Database Systems Data Models Vector Query.md  Database Systems Data Models Vector.md
tests/: test.py
vdb/: __init__.py
vdb3170/: app.py  get_started.ipynb  gif_search.ipynb  gif_search.py
(+258 files in other folders)
