[project]
name = "vdb3170"
version = "0.1.0"
description = "Vector Database Semantic Search for CSC3170 Group Project"
authors = [
    { name = "Langshangyuan", email = "langshangyuan13@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
    "flask>=3.0.0",
    "sentence-transformers>=2.2.2",
    "qdrant-client>=1.6.9",
    "tqdm>=4.66.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
